<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">"Wily"</string>
    <string name="facebook_app_id">1652761751694518</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appname">a</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="set_lock_string">Set Pattern Or Pin Lock</string>
    <string name="pass_conform_string">Confirm Pattern</string>
    <string name="set_unlock_string">Draw Pattern To Unlock</string>
    <string name="dialog_text">Willy uses The Device Administrator permission for quick access of various feature of mobile device such as:</string>
    <string name="dialog_text2">
        -          Lock Camera</string>
    <string name="dialog_text3"> -          Setting Home Screen</string>
    <string name="dialog_text4">-          Sound &amp; Ringtones</string>



    <string name="dialog_text1">This App has Assistive Touch feature with A floating  transparent &amp; smart bubble on the screento make quick access to all your favorite apps, games, setting and toggle.</string>

    <string name="dialog_text5">        -          Favorite apps</string>
    <string name="dialog_text6">-          Games</string>
    <string name="dialog_text7">-          Setting and toggle</string>
    <string name="hand_tutorial">Click Here</string>
    <string name="view_Screenshots">View ScreenShots</string>

    <string name="notification_title">Wily Screenshot</string>
    <string name="notification_message">Tap once to take screenshot</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="device_admin_explanation">Permission to lock your device remotely.</string>
    <string name="admin_receiver_status_enabled">You can Lock Screen now.</string>
    <string name="add_item">Add Item</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="assistive_touch">Assistive Touch</string>
    <string name="act_assistive_touch">Activate Assistive Touch</string>
    <string name="at_color">Color</string>
    <string name="at_icon">Icon</string>
    <string name="at_panel1">Panel 1</string>
    <string name="at_panel2">Panel 2</string>
    <string name="background_color">Background Color</string>
    <string name="icon">Icon</string>
    <string name="select_action">Select Action</string>
    <string name="none">None</string>
    <string name="main_panel">Main Panel</string>
    <string name="setting_panel">Setting Panel</string>
    <string name="customize_at">Customize Assistive Touch</string>

    <!-- AT Actions -->
    <string name="lock">Lock</string>
    <string name="home">Home</string>
    <string name="recents">Recents</string>
    <string name="location">Location</string>
    <string name="wifi">Wi-Fi</string>
    <string name="airplane">Airplane</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="screen_rotate">Rotate Screen</string>
    <string name="portrait">Portrait</string>
    <string name="auto_rot">Auto-rotate</string>
    <string name="landscape">Landscape</string>
    <string name="flashlight">Flashlight</string>
    <string name="sound_mode">Sound Mode</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="m_volume_up">Media Vol Up</string>
    <string name="m_volume_down">Media Vol Down</string>
    <string name="screenshot">Screenshot</string>
    <string name="normal">Ringer</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="splash_title1">Smart Utility Assistant</string>
    <string name="splash_title2"></string>
    <string name="text_kitkat">“Unfortunately, the screenshot feature may not be available for Android Kitkat or below.”</string>
    <string name="enable_screenshot">Enable ScreenShot</string>

    <string name="table_name">User_profile</string>

    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_pattern">Wrong Pattern</string>
    <string name="password_mismatch">Password Mismatch</string>


</resources>
