<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wily.Wily_popUp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/splash_bg">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_logo1"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dialog_text"
            android:textAlignment="inherit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text2"
                android:textAlignment="inherit"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text3"
                android:textAlignment="inherit"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text4"
                android:textAlignment="inherit"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_text1"
            android:textAlignment="inherit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_text5"
                    android:textAlignment="inherit"
                    android:textColor="@android:color/white"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_text6"
                    android:textAlignment="inherit"
                    android:textColor="@android:color/white"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_text7"
                    android:textAlignment="inherit"
                    android:textColor="@android:color/white"
                    android:textStyle="italic" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/ok"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:foregroundGravity="bottom"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"

                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="Next"
                    android:textColor="@android:color/white" />
            </LinearLayout>



        </LinearLayout>




    </LinearLayout>

</LinearLayout>
