<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/splash_logo1" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/splash_title1"
        android:textColor="@android:color/white"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:layout_centerHorizontal="true"
        android:text="@string/splash_title2" />

    <LinearLayout
        android:id="@+id/splace_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/screenshot_splace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splace_assistive"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/applock_splace"
            android:src="@drawable/screenshot1"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/torch_splac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/torch_splash1" />

        <ImageView
            android:id="@+id/seperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/torch_splac"
            android:src="@drawable/saperator_vartical" />

        <ImageView
            android:id="@+id/splace_assistive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"

            android:layout_toRightOf="@+id/seperator"
            android:src="@drawable/assistive_touch" />

        <ImageView
            android:id="@+id/seperator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/torch_splac"
            android:src="@drawable/saperator_vartical"
            android:visibility="gone"/>
        <!--<ImageView
            android:id="@+id/seperator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/seperator"
            android:layout_below="@+id/torch_splac"
            android:src="@drawable/splash_saperator_01"
            />-->
        <!--<ImageView
            android:id="@+id/seperator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/seperator"
            android:layout_below="@+id/splace_assistive"
            android:src="@drawable/splash_saperator_01"
            />-->
        <ImageView
            android:id="@+id/applock_splace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/torch_splac"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/splash_app_lock1"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:id="@+id/hand_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/splace_tutorial1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/hand_tutorial"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/splace_tutorial2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/hand_tutorial"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/splace_tutorial3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/hand_tutorial"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hand_tutorial1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hand_tutorial">

            <TextView
                android:id="@+id/hand_tutorial_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/hand_tutorial"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/hand_tutorial_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/hand_tutorial"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/hand_tutorial_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/hand_tutorial"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

    </RelativeLayout>

</RelativeLayout>
